fix: scrolling
- Removed scrollbar gutter
- Removed scroll disable on modal open
- Made template modal responsive on sm screens
- Made BaseLayout the root layout
- Changed setTheme to add dark class to html tag

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -4,14 +4,22 @@
 
 @layer base {
 
+  html {
+    overflow-x: hidden;
+  }
+
   body {
     width: 100%;
     overflow-x: hidden;
   }
 
-  #rootContainer:has(div.rg-modal) {
+  /* html {
+    scrollbar-gutter: stable;
+  } */
+
+  /* html:has(div.rg-modal, div.rg-drawer) {
     overflow-y: hidden;
-  }
+  } */
 
   div,
   input,
@@ -177,10 +185,7 @@
 ::-webkit-scrollbar-track {
   border-radius: 100px;
   background-color: transparent;
-}
-
-#rootContainer {
-  scrollbar-gutter: stable;
+  display: none;
 }
 
 /* .dark ::-webkit-scrollbar-thumb {
